--- a/style.css
+++ b/style.css
@@ -13,41 +13,7 @@ body {
     background-color: black;
 }
 
-@media (max-width: 750px) {
-    html {
-        font-size: .8em;
-    }
-    .title-container {
-        max-width: 40%;
-        padding: 0px;
-        font-size: .5em;
-    }
-    .library-title {
-        padding-right: 0px;
-    }
-    nav {
-        max-height: 100px;
-    }
-    .new-book-btn {
-        width: 50px;
-        padding-bottom: 50%;
-    }
-    .book-form.out {
-        width:100vw;
-    }
-    .side-panel.out {
-        width: 100vw;
-    }
-}
 
-@media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .new-book-btn {
-        width: 80px;
-        height: 80px;
-    }
-
-}
 nav {
     height: 120px;
     z-index: 200;
@@ -55,6 +21,11 @@ nav {
     border-style: solid;
     border-width: 2px;
     border-bottom-color: azure;
+    display: grid;
+    grid-gap: 20px;
+    padding: 0;
+    list-style: none;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 li {
@@ -110,7 +81,6 @@ button {
 .title-container {
     color: white;
     float: left;
-    padding-left: 65px;
     padding-top: 15px;
 }
 
@@ -159,6 +129,7 @@ button {
     border-style: solid;
     border-width: 2px;
     border-left-color: azure;
+
 }
 
 .side-panel.in {
@@ -260,6 +231,7 @@ button {
 
 .new-book-btn-container {
     float: right;
+    text-align: right;
 }
 
 .new-book-btn {
@@ -273,9 +245,7 @@ button {
     border-style: solid;
     text-align: center;
     vertical-align: middle;
-
 }
-
 
 .delete-btn {
     border-radius: 20px;
@@ -300,4 +270,54 @@ button {
     position: absolute;
     bottom: 200px;
     left: 0px;
+}
+
+@media (max-width: 767px) {
+    html {
+        font-size: .8em;
+    }
+    .title-container {
+        font-size: .6em;
+    }
+    .library-title {
+        padding-right: 0px;
+    }
+    nav {
+        max-height: 100px;
+        vertical-align: middle;
+    }
+    .new-book-btn {
+        width: 60px;
+        height: 60px;
+        float: right;
+        padding-top: -5px;
+        margin-top: 5px;
+    }
+    .side-panel {
+        max-height: calc(100vh - 138px);
+    }
+    .side-panel.out {
+        width: 100vw;
+    }
+    .side-panel.in {
+        width: 0;
+    }
+    .library-container.shrink {
+        width: 0px;
+    }
+    .book-form.out {
+        width: 95vw;
+    }
+    .book-form.in {
+        width: 0;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .new-book-btn {
+        width: 80px;
+        height: 80px;
+    }
+
 }
